--- a/style.css
+++ b/style.css
@@ -27,3 +27,60 @@
     font-family: 'Space Grotesk-bold';
     src: url(Police/Space_Grotesk/static/SpaceGrotesk-Bold.ttf);
 }
+
+.bg-header-home {
+    background-image: url(Illustrations/Bathome1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 75% 75%;
+    width: 100%;
+    height: 901px;
+}
+
+.bordure {
+    position: absolute;
+    top: 0;
+    left: 102px;
+    right: 102px;
+    border: 3px solid #76646145;
+    border-bottom: none;
+    border-top: none;
+    height: 1000px;
+}
+
+nav {
+    border-bottom: 4px solid #76646162;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px 80px 30px 80px;
+}
+
+.nav-link {
+    width: auto;
+    display: flex;
+    justify-content: center;
+    font-size: 25px;
+}
+
+ul {
+    display: flex;
+    align-items: center;
+}
+
+li a {
+    text-align: center;
+    padding: 0px 0px 0px 50px;
+    color: white;
+    font-family: 'rajdhani';
+    letter-spacing: 2px;
+}
+
+.active,
+li a:hover {
+    text-decoration: underline;
+    font-weight: bold;
+    text-decoration-thickness: from-font;
+    text-underline-position: under;
+}
