--- a/full-screen.css
+++ b/full-screen.css
@@ -14,7 +14,8 @@
         display: block;
         font-size: 15px;
     }
-    .foot a img {
+    .foot a img,
+    aside a img {
         width: 15px;
     }
     img[alt="Logo_sayna"],
@@ -23,5 +24,12 @@
     }
     .foot a img {
         padding: 0 5px 0 5px;
+    }
+    img[alt="fleche1"],
+    img[alt="fleche2"] {
+        width: 60px!important;
+    }
+    aside {
+        right: 0;
     }
 }
