--- a/style.css
+++ b/style.css
@@ -89,6 +89,20 @@ nav img:hover {
     filter: invert(33%) sepia(100%) saturate(8);
 }
 
+
+/* aside */
+
+aside {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    right: 50px;
+}
+
+
+/* footer */
+
 .container {
     display: flex;
 }
